# Consumption-Analysis

./: .gitignore  README.md  app.py  catboost_model.cbm  catboost_model_ALL_grid.cbm  csv_2_sql.py  data.db  main.ipynb  ml.ipynb  ml_optimize.ipynb  pyproject.toml  requirements.txt  start.sh
catboost_info/tmp/: cat_feature_index.5a580d41-da7eb505-a5763bb1-893af1ab.tmp
