[tool.poetry]
name = "consumption-analysis"
version = "0.1.0"
description = ""
authors = ["Kevin Huang <kevins50105@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
mysql-connector = "^2.2.9"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
streamlit = "^1.42.2"
plotly = "^6.0.0"
catboost = "^1.2.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
